--- a/frontend/src/app/admin/components/audiances/audiances.component.html
+++ b/frontend/src/app/admin/components/audiances/audiances.component.html
@@ -15,7 +15,7 @@
             </tr> </thead>
         <tr *ngFor="let audiance of audiances" >           
             <td>
-                <a [routerLink]="['/audiances/', audiance.id, 'view']" class="btn btn-link btn-danger">
+                <a [routerLink]="['./', audiance.id, 'view']" class="btn btn-link btn-danger">
                     <i class="fa fa-eye" aria-hidden="true">{{audiance.id}}</i>                
                 </a> 
             </td>
@@ -23,7 +23,7 @@
             <td>{{audiance.modificationTime }}</td> 
             <td>{{audiance.modifiedByUser}}</td> 
             <td> 
-                <a [routerLink]="['/admin/audiances/', audiance.id]"   class="btn btn-link btn-link-info">
+                <a [routerLink]="['./', audiance.id]"   class="btn btn-link btn-link-info">
                     <i class="fa fa-edit" aria-hidden="true"> Edit</i>                
                 </a>  
                 <button (click)="deleteAudiance(audiance)" class="btn btn-link btn-link-danger">
