--- a/frontend/src/app/admin/components/products/product-form/product-form.component.html
+++ b/frontend/src/app/admin/components/products/product-form/product-form.component.html
@@ -1,4 +1,5 @@
- <div class="container" style="padding-top: 90px;" >
+ <section class="container" style="padding-top: 90px;" >
+     
     <div class="row " align="center">
         <div class="col">
         <h2 *ngIf="isNewForm">Create new Product</h2>
@@ -84,15 +85,12 @@
             </div>
         </div>
         <div  class="form-group row">  
-            <label class="col col-md-3" style="text-align: right;" for="serviceCategoryType.id" >Display Content : </label> 
-            <div class="col col-md-9"> 
-<!--                <ckeditor *ngIf="globals.isCkEditorJsLoaded"
-                    name="displayContent" id="displayContent" 
-                    [(ngModel)]="product.displayContent" >
-                </ckeditor>  -->
-                <textarea disabled="disabled" *ngIf="!globals.isCkEditorJsLoaded" rows="10" class="form-control">
-                    {{product.displayContent}}
-                </textarea>
+            <label class="col col-md-3" style="text-align: right;" for="displayContent" >Display Content : </label> 
+            <div class="col col-md-9">  
+<!--                <ckeditor name="displayContent" 
+                          [(ngModel)]="product.displayContent" 
+                          [config]="{ extraPlugins: 'divarea', height: '320' }" >
+                </ckeditor>-->
             </div>
         </div>  
 
@@ -105,10 +103,10 @@
                 </button>  
             </div>
             <div class="col col-sm-7">
-                <a routerLink="/products" class="btn btn-warning "  >
+                <a [routerLink]="['../']" class="btn btn-warning "  >
                     <i class="fa fa-times" aria-hidden="true"> | Cancel</i>
                 </a> 
             </div>
         </div> 
     </form>  
-</div>
+</section>
