--- a/frontend/src/app/admin/components/service-category/service-category-form/service-category-form.component.html
+++ b/frontend/src/app/admin/components/service-category/service-category-form/service-category-form.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="padding-top: 90px;">
+<section class="container" style="padding-top: 90px;">   
 
     <div class="row" style="text-align: center;" > 
         <div class="col">
@@ -14,12 +14,14 @@
                 <input class="form-control"  type="text" id="id" name="id" [(ngModel)]="serviceCategory.id" disabled/> 
             </div>
         </div> 
+
         <div  class="form-group row">                 
             <label style="text-align: right;" for="name" class="col col-md-3" style="text-align: right;" >Name : </label>
             <div class="col col-md-9">
                 <input class="form-control"  type="text" id="name" name="name" #name="ngModel"  [(ngModel)]="serviceCategory.name"/> 
             </div>
         </div>  
+
         <div  class="form-group row"> 
             <label class="col col-md-3" style="text-align: right;" for="description" >Brief Description : </label>
             <div class="col col-md-9">
@@ -27,6 +29,7 @@
                           name="description" [(ngModel)]="serviceCategory.description"></textarea> 
             </div>
         </div> 
+
         <div  class="form-group row"> 
             <label class="col col-md-3" style="text-align: right;" for="faIcon" >FontAwesome Icon : </label>
             <div class="col col-md-9">
@@ -34,6 +37,7 @@
                           name="faIcon" [(ngModel)]="serviceCategory.faIcon"></textarea> 
             </div>
         </div> 
+
         <div class="form-group row"> 
             <label class="col col-md-3" style="text-align: right;"  >Images : </label> 
 
@@ -52,37 +56,14 @@
         </div> 
 
         <div class="form-group row"> 
-            <label class="col col-md-3" style="text-align: right;" for="serviceCategoryType.id" >Display Content : </label> 
-            <div class="col col-md-9">
-                <!--                <input *ngIf="globals.isCkEditorJsLoaded"
-                                    name="displayContent" id="displayContent" 
-                                    [(ngModel)]="serviceCategory.displayContent" >
-                                </input>-->
-                <textarea disabled="disabled" *ngIf="!globals.isCkEditorJsLoaded" rows="10" class="form-control">
-                    {{serviceCategory.displayContent}}
-                </textarea>
+            <label class="col col-md-3" style="text-align: right;" for="serviceCategoryType.displayContent" >Display Content : </label> 
+            <div class="col col-md-9"> 
+<!--                <ckeditor name="displayContent" 
+                          [(ngModel)]="serviceCategory.displayContent" 
+                          [config]="{ extraPlugins: 'divarea', height: '320' }" >
+                </ckeditor>-->
             </div>
-        </div>
-
-        <div class="form-group row"> 
-            <label class="col col-md-3" style="text-align: right;" for="serviceCategoryType.id" >Display Content : </label> 
-            <div class="col col-md-9">        
-
-                <!-- Create the toolbar container -->
-                <div id="toolbar">
-                    <button class="ql-bold">Bold</button>
-                    <button class="ql-italic">Italic</button>
-                </div>
-
-                <!-- Create the editor container -->
-                <div id="editor">
-                    <p>Hello World!</p>
-                </div>  
-                
-            </div>
-        </div>
-
-
+        </div> 
 
         <div class="form-group row">
             <div class="col col-md-6" align="right" >
@@ -98,5 +79,5 @@
             </div>
         </div> 
     </form>     
-    <!--</div>-->        
-</div>      
+<!--</div>-->        
+</section>      
