--- a/frontend/src/app/admin/components/service-category/service-category.component.html
+++ b/frontend/src/app/admin/components/service-category/service-category.component.html
@@ -22,7 +22,7 @@
                     </tr> </thead>
                 <tr *ngFor="let serviceCategory of serviceCategories" >           
                     <td>
-                        <a [routerLink]="['/admin/servicecategories/', serviceCategory.id, 'view']" class="nav-link">
+                        <a [routerLink]="['./', serviceCategory.id, 'view']" class="nav-link">
                             <i class="fa fa-eye" aria-hidden="true"> {{serviceCategory.id}}</i>            
                         </a> 
                     </td>
@@ -33,7 +33,7 @@
                     <td> </td>
                     <td> </td>
                     <td> 
-                        <a [routerLink]="['/admin/servicecategories/', serviceCategory.id]"   class="btn btn-link btn-link-info">
+                        <a [routerLink]="['./', serviceCategory.id]"   class="btn btn-link btn-link-info">
                             <i class="fa fa-edit" aria-hidden="true"> Edit</i>                
                         </a>  
                         <button (click)="deleteServiceCategory(serviceCategory)" class="btn btn-link btn-link-danger">
