--- a/frontend/src/app/shared/components/nav/nav.component.html
+++ b/frontend/src/app/shared/components/nav/nav.component.html
@@ -44,6 +44,7 @@
                         <a class="dropdown-item"  routerLinkActive="active current" routerLink="/admin/audiances">Audiances</a>
                         <a class="dropdown-item"  routerLinkActive="active current" routerLink="/admin/topics">Topics</a>
                         <a class="dropdown-item"  routerLinkActive="active current" routerLink="/admin/distributionmethods">Distribution Methods</a>  
+                        <a class="dropdown-item"  routerLinkActive="active current" routerLink="/admin/vendors">Vendors</a>  
                     </div>
                 </li>
                 <li class="nav-item" *ngIf="globals.production==false">
