--- a/frontend/src/app/admin/components/service-category/service-category-form/service-category-form.component.html
+++ b/frontend/src/app/admin/components/service-category/service-category-form/service-category-form.component.html
@@ -58,10 +58,10 @@
         <div class="form-group row"> 
             <label class="col col-md-3" style="text-align: right;" for="serviceCategoryType.displayContent" >Display Content : </label> 
             <div class="col col-md-9"> 
-<!--                <ckeditor name="displayContent" 
+                <ckeditor name="displayContent" 
                           [(ngModel)]="serviceCategory.displayContent" 
                           [config]="{ extraPlugins: 'divarea', height: '320' }" >
-                </ckeditor>-->
+                </ckeditor>
             </div>
         </div> 
 
