--- a/frontend/src/app/welcome/components/landing/landing.component.html
+++ b/frontend/src/app/welcome/components/landing/landing.component.html
@@ -62,8 +62,8 @@
                  data-wow-delay="0.2s"
                  *ngFor="let sc of globals.serviceCategories" >
                  <div class="box">
-                    <div class="icon"><a href="#"><i class="fa {{sc.faIcon}}"></i></a></div>
-                    <h3 class="title"><a href="#">{{sc.name}}</a></h3> 
+                    <div class="icon"><a routerLink="/services/service/{{sc.name}}"><i class="fa {{sc.faIcon}}"></i></a></div>
+                    <h3 class="title"><a routerLink="/services/service/{{sc.name}}">{{sc.name}}</a></h3> 
                     <p class="description" [innerHtml]="sc.shortDescription"></p>
                     <button *ngIf="globals.production==false" routerLink="/services/service/{{sc.name}}">View More</button>
                 </div>
@@ -83,8 +83,7 @@
             <h3 class="section-title">Facts</h3>
             <p class="section-description">Even though the company is fairly young, we have had our fair share of projects and responsibilities, and we do have quite a few projects out there.</p>
         </div> 
-        <div class="row counters">
-
+        <div class="row counters"> 
             <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 text-center"> 
                 <span data-toggle="counter-up">5</span>
                 <p>Clients</p>
